// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bathrooms Should render Bathrooms 1`] = `
<div
  className="bathroomsPage"
  data-test="bathroomsPageTest"
>
  <h3
    className="bathroomsPageTitle"
  >
    Bathrooms
  </h3>
  <Link
    className="addBathroomLink"
    to="/AddBathroom"
  >
    Add a Bathroom
  </Link>
  <Link
    className="addBathroomSmall"
    to="/AddBathroom"
  >
    +
  </Link>
  <fieldset
    className="sortBy"
  >
    <button
      className="button sortButton"
      onClick={[Function]}
    >
      Sort by Score
    </button>
    <button
      className="button sortButton"
      onClick={[Function]}
    >
      Sort by Distance
    </button>
  </fieldset>
  <section
    className="filterBy"
  >
    <div
      className="checkboxPair"
    >
      <label
        className="fieldTitle"
        htmlFor="filter-five-miles"
      >
        5 mile range
      </label>
      <input
        checked={false}
        className="checkBox"
        id="filter-five-miles"
        name="filter-five-miles"
        onChange={[Function]}
        type="checkbox"
        value="true"
      />
    </div>
    <div
      className="checkboxPair"
    >
      <label
        className="fieldTitle"
        htmlFor="filter-ten-miles"
      >
        10 mile range
      </label>
      <input
        checked={false}
        className="checkBox"
        id="filter-ten-miles"
        name="filter-ten-miles"
        onChange={[Function]}
        type="checkbox"
        value="true"
      />
    </div>
    <div
      className="checkboxPair"
    >
      <label
        className="fieldTitle"
        htmlFor="filter-twenty-miles"
      >
        20 mile range
      </label>
      <input
        checked={false}
        className="checkBox"
        id="filter-twenty-miles"
        name="filter-twenty-miles"
        onChange={[Function]}
        type="checkbox"
        value="true"
      />
    </div>
  </section>
  <ul
    className="itemLists"
  />
  <Pagination
    currentPage={1}
    paginate={[Function]}
    postsPerPage={10}
    totalPosts={0}
  />
</div>
`;

exports[`Bathrooms Should render with context 1`] = `
<div
  className="bathroomsPage"
  data-test="bathroomsPageTest"
>
  <h3
    className="bathroomsPageTitle"
  >
    Bathrooms
  </h3>
  <Link
    className="addBathroomLink"
    to="/AddBathroom"
  >
    Add a Bathroom
  </Link>
  <Link
    className="addBathroomSmall"
    to="/AddBathroom"
  >
    +
  </Link>
  <fieldset
    className="sortBy"
  >
    <button
      className="button sortButton"
      onClick={[Function]}
    >
      Sort by Score
    </button>
    <button
      className="button sortButton"
      onClick={[Function]}
    >
      Sort by Distance
    </button>
  </fieldset>
  <section
    className="filterBy"
  >
    <div
      className="checkboxPair"
    >
      <label
        className="fieldTitle"
        htmlFor="filter-five-miles"
      >
        5 mile range
      </label>
      <input
        checked={false}
        className="checkBox"
        id="filter-five-miles"
        name="filter-five-miles"
        onChange={[Function]}
        type="checkbox"
        value="true"
      />
    </div>
    <div
      className="checkboxPair"
    >
      <label
        className="fieldTitle"
        htmlFor="filter-ten-miles"
      >
        10 mile range
      </label>
      <input
        checked={false}
        className="checkBox"
        id="filter-ten-miles"
        name="filter-ten-miles"
        onChange={[Function]}
        type="checkbox"
        value="true"
      />
    </div>
    <div
      className="checkboxPair"
    >
      <label
        className="fieldTitle"
        htmlFor="filter-twenty-miles"
      >
        20 mile range
      </label>
      <input
        checked={false}
        className="checkBox"
        id="filter-twenty-miles"
        name="filter-twenty-miles"
        onChange={[Function]}
        type="checkbox"
        value="true"
      />
    </div>
  </section>
  <ul
    className="itemLists"
  >
    <li
      className="bathroomPost"
      key="2"
    >
      <NavLink
        className="bathroomLink"
        onClick={[Function]}
        to="/bathrooms/2"
      >
        Molca Salsa
      </NavLink>
      <BathroomRender
        bathroom={
          Object {
            "bathroom_user_id": "u5kz5iofaz",
            "bathroom_user_name": "gilbear",
            "distanceFar": 6525.8,
            "family": false,
            "handi": false,
            "id": 2,
            "latitude": "33.9177213",
            "longitude": "-117.93226909999998",
            "men": true,
            "name": "Molca Salsa",
            "overallScore": 1,
            "unisex": false,
            "women": true,
          }
        }
        convertBool={[Function]}
      />
    </li>
    <li
      className="bathroomPost"
      key="3"
    >
      <NavLink
        className="bathroomLink"
        onClick={[Function]}
        to="/bathrooms/3"
      >
        Target in Amerige 
      </NavLink>
      <BathroomRender
        bathroom={
          Object {
            "bathroom_user_id": "se8f1cqw5e",
            "bathroom_user_name": "gigi",
            "distanceFar": 6526.6,
            "family": true,
            "handi": true,
            "id": 3,
            "latitude": "33.8798667",
            "longitude": "-117.96115729999997",
            "men": true,
            "name": "Target in Amerige ",
            "overallScore": "Not Yet Reviewed",
            "unisex": true,
            "women": true,
          }
        }
        convertBool={[Function]}
      />
    </li>
  </ul>
  <Pagination
    currentPage={1}
    paginate={[Function]}
    postsPerPage={10}
    totalPosts={2}
  />
</div>
`;
